.provarCaches/00D6C0000000xA6UAI/objects/NSSCCConnector__SFCCConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting holds configuration settings to Integrate with Salesforce Commerce Cloud.</description>
    <fields>
        <fullName>NSSCCConnector__Customer_List_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Customer List id</description>
        <label>Customer List Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Master_Catalog_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud master catalog id for assigned to a commerce cloud site.</description>
        <label>Master Catalog Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NSSCCConnector__PriceBook_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Price book id assigned to a Salesforce Commerce Cloud Site.</description>
        <label>PriceBook Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NSSCCConnector__SFCC_Site_URL__c</fullName>
        <description>This field holds Salesforce Commerce Cloud end point domain to connect to Salesforce Commerce Cloud.</description>
        <label>SFCC Site URL</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Sales_Catalog_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Sales Catalog id assigned to a Salesforce Commerce Cloud site.</description>
        <label>Sales Catalog Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Site_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Site Id.</description>
        <label>Site Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Time__c</fullName>
        <description>Specified time that connect to commerce cloud and pull datas after rest service triggered(minutes)</description>
        <label>Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SFCC Configuration</label>
</CustomObject>